--- a/FreeROMS.html
+++ b/FreeROMS.html
@@ -37,7 +37,7 @@
         }
 
         header .logo span {
-            color: #ffffff;
+            color: #423b3b;
         }
         
         .main-layout {
@@ -117,8 +117,8 @@
         }
 
         .download-info {
-            background-color: #f4f4f4;
-            color: #121212;
+            background-color: #353131;
+            color: #d8d1d1;
             padding: 25px;
             width: 220px;
             text-align: center;
@@ -312,7 +312,7 @@
                     </div>
                     
                     <div class="recommendation-image">
-                        <img src="https://get.wallhere.com/photo/Hotline-Miami-1640621.jpg" alt="Recomendación: Hotline Miami">
+                        <img src="https://wallpapercave.com/wp/wp1963537.jpg" alt="Recomendación: Hotline Miami">
                     </div>
                 </div>
 
