--- a/FreeROMS.html
+++ b/FreeROMS.html
@@ -414,7 +414,23 @@
             <aside class="sidebar-right">
                 <h2 class="sidebar-title">ROMS</h2>
                 <ul class="rom-list">
-                    <li><a href="#">Amiga</a></li><li><a href="#">Amstrad CPC</a></li><li><a href="#">Atari 2600</a></li><li><a href="#">Atari Jaguar</a></li><li><a href="#">Atari Linx</a></li><li><a href="#">Capcom Play System</a></li><li><a href="#">ColecoVision</a></li><li><a href="#">Game Boy Advance</a></li><li><a href="#">Game Boy Color</a></li><li><a href="#">Intellivision</a></li><li><a href="#">Mame</a></li><li><a href="#">Neo Geo</a></li><li><a href="#">Neo Geo Pocket</a></li><li><a href="#">Nintendo 64</a></li><li><a href="#">Nintendo DS</a></li><li><a href="#">NES</a></li><li><a href="#">Nintendo Game Cube</a></li><li><a href="#">PlayStation</a></li><li><a href="#">Sega Genesis</a></li><li><a href="#">Super Nintendo</a></li>
+                    <li><a href="#">Amiga</a></li>
+                    <li><a href="#">Amstrad CPC</a></li>
+                    <li><a href="#">Atari 2600</a></li>
+                    <li><a href="#">Atari Jaguar</a></li>
+                    <li><a href="#">ColecoVision</a></li>
+                    <li><a href="#">Game Boy Advance</a></li>
+                    <li><a href="#">Game Boy Color</a></li>
+                    <li><a href="#">Intellivision</a></li>
+                    <li><a href="#">Mame</a></li>
+                    <li><a href="#">Neo Geo</a></li>
+                    <li><a href="#">Nintendo 64</a></li>
+                    <li><a href="#">Nintendo DS</a></li>
+                    <li><a href="#">NES</a></li>
+                    <li><a href="#">Nintendo Game Cube</a></li>
+                    <li><a href="#">PlayStation</a></li>
+                    <li><a href="#">Sega Genesis</a></li>
+                    <li><a href="#">Super Nintendo</a></li>
                 </ul>
             </aside>
         </div>
