--- a/FreeROMS.html
+++ b/FreeROMS.html
@@ -139,6 +139,10 @@
             transform: scale(1.02) translateY(2px);
             transition: transform 0.1s ease;
         }
+
+        .sidebar-item + .sidebar-title {
+            margin-top: 50px;
+        }
         
         .logo-container {
             height: 65px;
@@ -220,7 +224,7 @@
             height: 100%;
             object-fit: cover;
             transition: transform 0.4s ease-in-out;
-            transform-origin: center left;
+            transform-origin: center;
         }
         
         .recommendation-box:hover .recommendation-image img {
@@ -422,7 +426,7 @@
                     </div>
                     <span>ATARI</span>
                 </div>
-                <h2 class="sidebar-title" style="margin-top: 40px;">Sagas Populares</h2>
+                <h2 class="sidebar-title">Sagas Populares</h2>
                 <div class="sidebar-item">
                     <div class="logo-container">
                         <img src="https://www.pngmart.com/files/2/Pokeball-PNG-Free-Download.png" alt="Logo Pokemon">
